# SplitVice

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.kiro/specs/expense-sharing-app/: .config.kiro  design.md  requirements.md  tasks.md
app/: main.py
app/api/v1/: dependencies.py
app/core/: config.py  exceptions.py  logging_config.py  middleware.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  expense.py  group.py  settlement.py  user.py
app/repositories/: balance_repository.py  expense_repository.py  group_repository.py  settlement_repository.py  user_repository.py
app/schemas/: auth.py  balances.py  expenses.py  groups.py  settlements.py  users.py
app/services/: auth_service.py  balance_service.py  expense_service.py  group_service.py  settlement_service.py  user_service.py
app/templates/: base.html  landing.html
app/templates/auth/: login.html  register.html
app/templates/dashboard/: index.html
app/templates/expenses/: form.html
app/templates/groups/: detail.html  form.html
app/web/: cookies.py  dependencies.py  routes.py  templates.py
migrations/: env.py
migrations/versions/: 20250511_47337a1eb424_initial.py  20250511_f8a86943b1b4_add_settlement_creator_id.py
tests/: conftest.py
tests/helpers/: auth.py
tests/integration/: test_auth.py  test_balances.py  test_e2e_flows.py  test_expenses.py  test_groups.py  test_hardening.py  test_health.py  test_models.py  test_partial_participation.py  test_settlements.py  test_web.py
(+8 files in other folders)
