[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splitvice"
version = "0.1.0"
description = "Production-grade expense sharing application"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.30.*",
    "gunicorn==22.*",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.29.*",
    "alembic==1.13.*",
    "bcrypt==5.*",
    "python-jose[cryptography]==3.3.*",
    "pydantic[email]==2.*",
    "pydantic-settings==2.*",
    "jinja2==3.1.*",
    "python-multipart==0.0.*",
    "whitenoise==6.*",
]

[project.optional-dependencies]
dev = [
    "httpx==0.27.*",
    "pytest==8.*",
    "pytest-asyncio==0.23.*",
    "aiosqlite==0.20.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
